--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="conteiner our-team">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-list" lang="en">
-            <li>
+            <li class="our-team-item">
               <img
                 src="./images/john-smith.png"
                 alt="John Smith's photo"
@@ -143,7 +143,7 @@
                 <li><a href="">linkedin</a></li>
               </ul>
             </li>
-            <li>
+            <li class="our-team-item">
               <img
                 src="./images/marta-stewart.png"
                 alt="Marta Stewart's photo"
@@ -159,7 +159,7 @@
                 <li><a href="">linkedin</a></li>
               </ul>
             </li>
-            <li>
+            <li class="our-team-item">
               <img
                 src="./images/robert-jakis.png"
                 alt="Robert Jakis's photo"
@@ -175,7 +175,7 @@
                 <li><a href="">linkedin</a></li>
               </ul>
             </li>
-            <li>
+            <li class="our-team-item">
               <img
                 src="./images/martin-doe.png"
                 alt="Martin Doe's photo"
