--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
           <ul class="what-do-we-do-list">
             <li>
               <a href="">
-                <img src="./images/leptop.png" alt="ноутбук" width="370" />
+                <img src="./images/leptop.jpg" alt="ноутбук" width="370" />
               </a>
               <p>Десктопные приложения</p>
             </li>
             <li>
               <a href="">
-                <img src="./images/phone.png" alt="смартфон" width="370" />
+                <img src="./images/phone.jpg" alt="смартфон" width="370" />
               </a>
               <p>Мобильные приложения</p>
             </li>
             <li>
               <a href="">
-                <img src="./images/monitor.png" alt="монитор" width="370" />
+                <img src="./images/monitor.jpg" alt="монитор" width="370" />
               </a>
               <p>Дизайнерские решения</p>
             </li>
@@ -129,7 +129,7 @@
           <ul class="our-team-list" lang="en">
             <li class="our-team-item">
               <img
-                src="./images/john-smith.png"
+                src="./images/john-smith.jpg"
                 alt="John Smith's photo"
                 width="270"
               />
@@ -145,7 +145,7 @@
             </li>
             <li class="our-team-item">
               <img
-                src="./images/marta-stewart.png"
+                src="./images/marta-stewart.jpg"
                 alt="Marta Stewart's photo"
                 width="270"
               />
@@ -161,7 +161,7 @@
             </li>
             <li class="our-team-item">
               <img
-                src="./images/robert-jakis.png"
+                src="./images/robert-jakis.jpg"
                 alt="Robert Jakis's photo"
                 width="270"
               />
@@ -177,7 +177,7 @@
             </li>
             <li class="our-team-item">
               <img
-                src="./images/martin-doe.png"
+                src="./images/martin-doe.jpg"
                 alt="Martin Doe's photo"
                 width="270"
               />
