SVG для Наших преимуществ

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         <ul class="conteiner advantages-list">
           <li>
             <div class="image-conteiner">
-              <img src="./images/antena.svg" alt="Антена" width="70" />
+              <svg class="advantages-icon">
+                <use href="./images/symbol-defs.svg#antena"></use>
+              </svg>
             </div>
             <h3>Внимание к деталям</h3>
             <p>
@@ -65,7 +67,9 @@
           </li>
           <li>
             <div class="image-conteiner">
-              <img src="./images/clock.svg" alt="Часы" width="70" />
+              <svg class="advantages-icon">
+                <use href="./images/symbol-defs.svg#clock"></use>
+              </svg>
             </div>
             <h3>Пунктуальность</h3>
             <p>
@@ -75,7 +79,9 @@
           </li>
           <li>
             <div class="image-conteiner">
-              <img src="./images/diagram.svg" alt="Диаграмма" width="70" />
+              <svg class="advantages-icon">
+                <use href="./images/symbol-defs.svg#diagram"></use>
+              </svg>
             </div>
             <h3>Планирование</h3>
             <p>
@@ -85,7 +91,9 @@
           </li>
           <li>
             <div class="image-conteiner">
-              <img src="./images/astronaut.svg" alt="Астронавт" width="70" />
+              <svg class="advantages-icon">
+                <use href="./images/symbol-defs.svg#astronaut"></use>
+              </svg>
             </div>
             <h3>Современные технологии</h3>
             <p>
