--- a/index.html
+++ b/index.html
@@ -313,42 +313,42 @@
           <ul class="customer-list">
             <li>
               <a href="">
-                <svg class="customer-icon" width="44">
+                <svg class="customer-icon" width="44" height="49">
                   <use href="./images/symbol-defs.svg#logo-1"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="">
-                <svg class="customer-icon" width="40">
+                <svg class="customer-icon" width="41" height="52">
                   <use href="./images/symbol-defs.svg#logo-2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href=""
-                ><svg class="customer-icon" width="41">
+                ><svg class="customer-icon" width="41" height="42.6">
                   <use href="./images/symbol-defs.svg#logo-3"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href=""
-                ><svg class="customer-icon" width="80">
+                ><svg class="customer-icon" width="80" height="42">
                   <use href="./images/symbol-defs.svg#logo-4"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href=""
-                ><svg class="customer-icon" width="57">
+                ><svg class="customer-icon" width="59" height="47">
                   <use href="./images/symbol-defs.svg#logo-5"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href=""
-                ><svg class="customer-icon" width="88">
+                ><svg class="customer-icon" width="88" height="45">
                   <use href="./images/symbol-defs.svg#logo-6"></use>
                 </svg>
               </a>
@@ -410,12 +410,14 @@
           </div>
           <div class="container-subscribe">
             <p class="offer-to-subscribe">Подпишитесь на рассылку</p>
-            <input class="mail-sign" type="text" placeholder="E-mail" />
-            <div class="container-subscribe-link">
-              <a class="subscribe-link" href="">Подписаться</a>
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-send"></use>
-              </svg>
+            <div class="secondary-container-subscribe">
+              <input class="mail-sign" type="text" placeholder="E-mail" />
+              <div class="container-subscribe-link">
+                <a class="subscribe-link" href="">Подписаться</a>
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
