--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
   <body>
     <!-- Топ линия -->
     <header>
-      <nav class="conteiner site-nav-main">
-        <div class="conteiner site-nav-secondary">
+      <nav class="container site-nav-main">
+        <div class="container site-nav-secondary">
           <a href="index.html" class="logo"
             ><span class="logo-firs-half">Web</span>
             <span class="logo-second-half">Studio</span>
@@ -29,12 +29,18 @@
             <li class="nav-list-item"><a href="">Контакты</a></li>
           </ul>
           <ul class="contacts">
-            <li>
+            <li class="contacts-item">
+              <svg class="our-mail-icon">
+                <use href="./images/symbol-defs.svg#envelope-hover"></use>
+              </svg>
               <a class="our-mail" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="contacts-item">
+              <svg class="our-mail-icon">
+                <use href="./images/symbol-defs.svg#smartphone"></use>
+              </svg>
               <a class="our-phone" href="tel:+38-096-111-11-11"
                 >+38 096 111 11 11</a
               >
@@ -45,7 +51,7 @@
     </header>
     <main>
       <!-- Основная секция -->
-      <section class="conteiner main-section">
+      <section class="container main-section">
         <ul class="portfolio-filtr-list">
           <li><a href="">Все</a></li>
           <li><a href="">Веб-сайты</a></li>
@@ -205,8 +211,9 @@
     <!-- Нижняя строка с контактами -->
     <footer>
       <section class="last-section">
-        <div class="conteiner last-box">
-          <div class="conteiner-logo&address">
+        <h2>Симантичный заголовок</h2>
+        <div class="container last-box">
+          <div class="container-logo&address">
             <p class="logo">
               <span class="logo-firs-half">Web</span>
               <span class="logo-seconf-half">Studio</span>
@@ -219,23 +226,54 @@
               </ul>
             </address>
           </div>
-          <div class="conteiner-join-us">
+          <div class="container-join-us">
             <p class="offer-to-join-us">Присоединяйтесь</p>
-            <ul>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Linkdin</a></li>
+            <ul class="networks">
+              <li class="network-item">
+                <a href="" class="join-us-networks-icon">
+                  <svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="network-item">
+                <a href="" class="join-us-networks-icon">
+                  <svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="network-item">
+                <a href="" class="join-us-networks-icon">
+                  <svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="network-item">
+                <a href="" class="join-us-networks-icon">
+                  <svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </div>
-          <div class="conteiner-subscribe">
+          <div class="container-subscribe">
             <p class="offer-to-subscribe">Подпишитесь на рассылку</p>
-            <input class="mail-sign" type="text" placeholder="E-mail" />
-            <a class="subscribe-link" href="">Подписаться</a>
+            <div class="secondary-container-subscribe">
+              <input class="mail-sign" type="text" placeholder="E-mail" />
+              <div class="container-subscribe-link">
+                <a class="subscribe-link" href="">Подписаться</a>
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </div>
+            </div>
           </div>
         </div>
       </section>
-      <div class="conteiner-developer">
+      <div class="container-developer">
         <p class="developer-information">2020 | Developed by GoIT Students</p>
       </div>
     </footer>
